--- a/Front End/src/App.css
+++ b/Front End/src/App.css
@@ -424,7 +424,7 @@ div#txt {
 .member h3{
   font-weight: bold;
   font-size: 27px;
-  text-decoration: 2px underline #eee;
+  text-decoration: 2px underline antiquewhite;
   padding: 10px;
 }
 
